--- a/src/Web/src/app/shared/pages/authorization/authorization.component.html
+++ b/src/Web/src/app/shared/pages/authorization/authorization.component.html
@@ -1,7 +1,7 @@
 <div class="container ">
     <div class="row d-flex justify-content-center mx-auto">
     <div class="card w-auth p-4 mt-50">
-        <h3 class="text-center mb-3">QMS | Authorization</h3>
+        <h3 class="text-center mb-3 fw-bolder">QMS | Authorization</h3>
         <form>
             <div class="mb-3">
               <label for="email" class="form-label">Email:</label>
