--- a/src/Web/src/styles.scss
+++ b/src/Web/src/styles.scss
@@ -2,3 +2,5 @@ html,body{
     background-color: #F1F3F4;
     height: 100%;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
