Revert "added material design"

--- a/src/Web/src/app/pages/authorization/authorization.component.html
+++ b/src/Web/src/app/pages/authorization/authorization.component.html
@@ -3,20 +3,16 @@
     <div class="card w-auth p-4 mt-50">
         <h3 class="text-center mb-3 fw-bolder">QMS | Authorization</h3>
         <form>
-
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>Input</mat-label>
-                <input matInput>
-              </mat-form-field>
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>Enter your password</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'">
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                  <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-              </mat-form-field>
-
-            <button mat-raised-button color="primary">Auth</button>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email:</label>
+              <input type="email" class="form-control" id="email">
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password:</label>
+              <input type="password" class="form-control" id="password">
+            </div>
+            
+            <button type="submit" class="btn btn-primary">Auth</button>
           </form>
           <a routerLink="/registration" routerLinkActive="true" class="mt-1 text-end">Registration</a>
     </div>
